crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_011_ColorDreams_Bible_Adventures_USA_v1_5_Unl_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-011-ColorDreams/Bible Adventures (USA) (v1.5) (Unl).zip
rom_sha256=46ef25c64c0b33b728423de104863b383e08b4859982ec925d26aaebd774805d
frames=1141
fb_bytes=245760
cycles=33949773
audio_samples=836505
audio_fnv1a64=eabc9611dbb08e58
checkpoint f900 fb_fnv1a64=f45f10934f825247
checkpoint f1100 fb_fnv1a64=a47b11930b935d47
